# latex2typst

./: Cargo.toml  README.md  VSCODE_EXTENSION_SUMMARY.md
.github/workflows/: ci.yml
benches/: conversion.rs
examples/: convert_latex.rs  convert_markdown.rs  convert_math.rs  test_math.rs  wasm_usage.html  wasm_usage.js
src/: detector.rs  error.rs  lib.rs  wasm.rs
src/ast/: document.rs  math.rs  mod.rs
src/converter/: math.rs  mod.rs  typst.rs
src/parser/: markdown.rs  mod.rs
src/parser/latex/: document.rs  math.rs  mod.rs
tests/: markdown_tests.rs
tests/fixtures/latex/: simple_article.tex  simple_article.typ
tests/fixtures/markdown/: basic.md  basic.typ  math.md  math.typ
vscode-extension/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  README.md  SETUP.md  package.json  pnpm-lock.yaml  setup.sh  test-conversion.js  tsconfig.json
vscode-extension/examples/: test.md  test.tex
vscode-extension/scripts/: build-wasm.ps1  build-wasm.sh
vscode-extension/src/: extension.ts
web/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  rspack.config.js
web/src/: App.vue
